# transcriber

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  README_zh.md  build.rs  config.yaml.example
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
openspec/changes/add-code-formatting-workflow/: design.md  proposal.md  tasks.md
openspec/changes/add-code-formatting-workflow/specs/code-formatting-enforcement/: spec.md
openspec/changes/archive/2025-05-02-add-streaming-output/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-05-02-add-streaming-output/specs/streaming-output/: spec.md
openspec/changes/archive/2026-05-02-add-whisper-inference-params/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-02-add-whisper-inference-params/specs/inference-params/: spec.md
openspec/changes/archive/2026-05-02-rust-transcriber-cli/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-02-rust-transcriber-cli/specs/audio-extraction/: spec.md
openspec/changes/archive/2026-05-02-rust-transcriber-cli/specs/configuration-management/: spec.md
openspec/changes/archive/2026-05-02-rust-transcriber-cli/specs/model-management/: spec.md
openspec/changes/archive/2026-05-02-rust-transcriber-cli/specs/output-formats/: spec.md
openspec/changes/archive/2026-05-02-rust-transcriber-cli/specs/video-transcription/: spec.md
src/: audio.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  model.rs  output.rs  transcription.rs
tests/: integration.rs
