[package]
name = "transcriber"
version = "0.1.0"
edition = "2021"
description = "A fast video transcription CLI tool powered by whisper.cpp"

[dependencies]
whisper-rs = "0.16"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
indicatif = "0.17"
tokio = { version = "1", features = ["process", "fs", "io-util", "rt-multi-thread", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
num_cpus = "1"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
hound = "3"
which = "7"
ctrlc = "3"
serde_json = "1"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
